Fix nav wrap on mobile

--- a/assets/sass/080-ui-components/_nav.scss
+++ b/assets/sass/080-ui-components/_nav.scss
@@ -9,6 +9,7 @@
   margin-bottom: get-spacing('small');
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 .comp-nav__item {
